<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        style="@style/BackgroundPicture"
        android:src="@drawable/background" />

    <ScrollView style="@style/ScrollView">

        <LinearLayout style="@style/MainLayout">

            <LinearLayout
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/question_1" />

                <RadioGroup style="@style/RadioGroup"
                    android:id="@+id/q1_radio_group">

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q1_radio_button_A"
                        android:text="@string/question_1_answer_A" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q1_radio_button_B"
                        android:text="@string/question_1_answer_B" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q1_radio_button_C"
                        android:text="@string/question_1_answer_C" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q1_radio_button_D"
                        android:text="@string/question_1_answer_D" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/question_2" />

                <RadioGroup style="@style/RadioGroup"
                    android:id="@+id/q2_radio_group">

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q2_radio_button_A"
                        android:text="@string/yes" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q2_radio_button_B"
                        android:text="@string/no" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/question_3" />

                <EditText
                    style="@style/EditText"
                    android:id="@+id/q3_edit_text"
                    android:hint="@string/answer">
                </EditText>
            </LinearLayout>

            <LinearLayout style="@style/QuestionLayout">

                <TextView
                    android:id="@+id/q4"
                    style="@style/QuestionTextView"
                    android:text="@string/question_4" />

                <EditText
                    style="@style/EditText"
                    android:id="@+id/q4_edit_text"
                    android:hint="@string/answer">
                </EditText>
            </LinearLayout>

            <LinearLayout style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/question_5" />

                <CheckBox
                    style="@style/CheckBox"
                    android:id="@+id/q5_check_box_A"
                    android:text="@string/question_5_answer_A" />

                <CheckBox
                    style="@style/CheckBox"
                    android:id="@+id/q5_check_box_B"
                    android:text="@string/question_5_answer_B" />

                <CheckBox
                    style="@style/CheckBox"
                    android:id="@+id/q5_check_box_C"
                    android:text="@string/question_5_answer_C" />

            </LinearLayout>

            <LinearLayout style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/question_6" />

                <RadioGroup style="@style/RadioGroup"
                    android:id="@+id/q6_radio_group">

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q6_radio_button_A"
                        android:text="@string/question_6_answer_A" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:id="@+id/q6_radio_button_B"
                        android:text="@string/question_6_answer_B" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

            <Button
                style="@style/Button"
                android:text="@string/send"
                android:onClick="onButtonPressed"
                android:id="@+id/button_send"/>

            <Button
                style="@style/Button"
                android:text="@string/reset"
                android:onClick="onButtonPressed"
                android:id="@+id/button_reset"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
